# fastapp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  dumb-docker-compose.yml  pyproject.toml  ruff.toml
deploy/: docker-compose.dev.yml
docker/: DevDockerfile  MountDockerfile  MountVarDockerfile
rz_fastapp/: __main__.py  main.py  settings.py
rz_fastapp/web/: application.py
rz_fastapp/web/api/: health.py  health_check.py  lifespan.py  table.py
