[tool.poetry]
name = "rz-fastapp"
version = "0.1.0"
description = ""
authors = ["Ryan <5668783+ryanzhou7@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rz_fastapp"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
