[tool.poetry]
name = "rz-fastapp"
version = "0.1.0"
description = ""
authors = ["Ryan <5668783+ryanzhou7@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rz_fastapp"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic-settings = "^2.5.2"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.7.0"
mypy = "^1.12.0"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
